# hyperium-sovereign-os

./: .env.production  .gitignore  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  linkedin-post.md  setup-tls.sh
.github/workflows/: ci.yml
agent/: Cargo.toml  build.sh
agent/config/: agent.toml
agent/src/: config.rs  main.rs
agent/src/actions/: enforcement.rs  mod.rs
agent/src/comms/: mod.rs  queue.rs  server.rs
agent/src/crypto/: signer.rs
agent/src/monitor/: filesystem.rs  mod.rs  network.rs  session.rs  usb.rs
agent/systemd/: sovereign-agent.service
docs/: demo-1-landing.html  demo-2-dashboard.html  demo-3-evidence.html  demo-4-policy.html  demo-5-attack.html  demo-compliance.html  demo-dashboard.html  demo-incident.html  index.html
nginx/: nginx.conf
nginx/conf.d/: init-only.conf  sovereign.conf
server/: .coverage  .dockerignore  .env.example  Dockerfile  pytest.ini  requirements.txt  sovereign_os.db-journal
server/app/: config.py  database.py  main.py  models.py  schemas.py
server/app/api/: alerts.py  events.py  evidence.py  metrics.py  policies.py  workspaces.py
server/app/auth/: __init__.py  middleware.py  router.py
server/config/: api_keys.json
server/policies/: default.yaml
server/scripts/: demo_attack.py
server/static/: dashboard.html
server/tests/: conftest.py  test_api.py  test_auth.py  test_breach.py  test_compliance.py  test_crypto.py  test_evidence_vault.py  test_forensics.py  test_metrics.py  test_policy_engine.py  test_rate_limiter.py  test_reports.py  test_risk_engine.py
(+20 files in other folders)
