[package]
name = "sovereign-agent"
version = "0.1.0"
edition = "2021"
description = "Hyperium Sovereign-OS Endpoint Agent — Guardian de endpoints"
authors = ["Hyperium IA <security@hyperiumia.com>"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
inotify = "0.10"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
tokio-util = "0.7"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
